<resources>
    <string name="app_name">PrimerParcial</string>
    <string name="calcular">Calcular</string>
    <string name="adivinar">Adivinar Numero</string>
    <string name="cambiarColor">Cambiar Color Fondo</string>
    <string name="polimonio">Polinomio 2°Grado</string>
    <string name="jugar">Jugar</string>
    <string name="gano">Eres un ganador!</string>
    <string name="gameover">Game Over!</string>
    <string name="digitar">Digite numeros:</string>
    <string name="numero1">Numero 1</string>
    <string name="numero2">Numero 2</string>
    <string name="MCD">MCD</string>
    <string name="MCM">MCM</string>
    <string name="MCDCompleto">Maximo Comun Divisor</string>
    <string name="MCMCompleto">Maximo Comun Multiplo</string>
    <string name="a">Numero A</string>
    <string name="b">Numero B</string>
    <string name="c">Numero C</string>
    <string name="raiz">La raiz es: </string>
    <string name="menu">MENU</string>
    <string name="acerca">Acerca</string>
    <string name="game">Game "Adivina"</string>
    <string name="men">El numero es menor.</string>
    <string name="may">El numero es mayor.</string>
    <string name="winner">Winner!</string>
    <string name="lose">Game Over!</string>
    <string name="creado">Creado por:</string>
    <string name="nombre1">Sol Mayra Lozano.</string>
    <string name="version">Version:</string>
    <string name="numero_version">1.5</string>
    <string name="empresa">Elaborado para: </string>
    <string name="nombre_empresa">UniMatematicas</string>
    <string name="licencia">Tipo de Licencia</string>
    <string name="opensource">OpenSource</string>
    <string name="copy">Distribucion Libre. 2017</string>
    <string name="ingresar">Ingrese Numero</string>
</resources>
