<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.solmayra.primerparcial2017.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:text="@string/MCMCompleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnmcm"
        android:textStyle="normal|bold"
        android:textSize="15sp"
        android:drawableStart="@mipmap/ic_math"
        android:drawableLeft="@mipmap/ic_math"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/btnmcd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/adivinar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnadivinar"
        android:textStyle="normal|bold"
        android:textSize="15sp"
        android:drawableStart="@mipmap/ic_question"
        android:drawableLeft="@mipmap/ic_question"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:id="@+id/textView"
        android:textSize="26sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        tools:ignore="RelativeOverlap,UnknownId"
        android:text="@string/menu"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/MCDCompleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnmcd"
        android:textStyle="normal|bold"
        android:textSize="15sp"
        android:drawableStart="@mipmap/ic_math"
        android:drawableLeft="@mipmap/ic_math"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/btnadivinar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
