<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/MCMCompleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:id="@+id/textView7"
        android:textStyle="normal|bold"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:id="@+id/txtnum11"
        android:textAlignment="center"
        android:hint="@string/ingresar" />

    <Button
        android:text="@string/calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtnum22"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:id="@+id/btncalcular2"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btncalcular2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:id="@+id/txtresultado2"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:layout_marginTop="31dp"
        android:id="@+id/txtnum22"
        android:layout_below="@+id/txtnum11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:hint="@string/ingresar" />
</RelativeLayout>