<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/MCDCompleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:id="@+id/textView7"
        android:textStyle="normal|bold"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp"
        android:id="@+id/txtnum11"
        android:hint="@string/ingresar"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:layout_below="@+id/txtnum11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/txtnum21"
        android:hint="@string/ingresar"
        android:textAlignment="center" />

    <Button
        android:text="@string/calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtnum21"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:id="@+id/btncalcular1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btncalcular1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:id="@+id/txtresultado"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:textAlignment="center" />
</RelativeLayout>