<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtnumero"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:id="@+id/txtinfo"
        android:textStyle="normal|bold"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtinfo"
        android:layout_alignRight="@+id/txtinfo"
        android:layout_alignEnd="@+id/txtinfo"
        android:layout_marginTop="35dp"
        android:id="@+id/txtganar"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:id="@+id/textView6"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtnumero"
        android:hint="@string/ingresar"
        android:layout_width="match_parent"
        android:layout_below="@+id/btnjugar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/jugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:id="@+id/btnjugar"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />
</RelativeLayout>